---------------------------------------------------------------------------------------------------
Version: 0.0.8
Date: ????
  Info:
    - Only condense when it would output at least one
    - Confirm the right amount got removed and inserted
    - Cleanup the container when the crafter goes away
    - Spill items when mining the crafter
---------------------------------------------------------------------------------------------------
Version: 0.0.7
Date: 2025. 02. 03
  Info:
    - Fix unrenamed variable
    - Fix crash when there is not enough to upgrade
    - Add failsafe for machines stuck in idle (full & newly unlocked quality, changed recipe)
    - Update recipe
    - Add a technology node under red chips
    - Add technology description
---------------------------------------------------------------------------------------------------
Version: 0.0.6
Date: 2025. 02. 03
  Info:
    - Tinker with the accumulator sounds
    - This doesn't sound half bad tbh
    - Cleanup unused sound settings
    - Prevent pipetting it in editor mode
    - Ensure the recipe is always set
    - Fix 〃
    - Fix deadlock
    - Map which qualities are below the current setting
    - Detect eligible stacks
    - Make the machine function
    - Fix black square not loading
    - Cap quality at 100%
    - Strengthen math and logging
    - Fix closure saving error
    - Initial attempt at preserving spoil percentages
    - Fix lower than expected spoil percentages
    - Document it preserves spoiled state
    - Actually this cannot be cached
    - Fix wrong table key check
---------------------------------------------------------------------------------------------------
Version: 0.0.5
Date: 2025. 02. 03
  Info:
    - Align result quality over the chimney
    - Fix second offering
    - Use the recipe quality as the shown quality
    - Draw the quality icon nice and large
    - Allow users access to the quality dropdown
    - Use a whole bunch of items as placeholder