@@ -141,6 +141,20 @@ local deathrattles = {
   end,
   ["crafter"] = function (deathrattle)
     local struct = storage.structs[deathrattle[2]]
+    if struct.container_inventory.valid then
+      for slot = 1, #struct.container_inventory do
+        local stack = struct.container_inventory[slot]
+        if stack.valid_for_read then
+          struct.container.surface.spill_item_stack{
+            position = struct.container.position,
+            stack = stack,
+            force = struct.container.force,
+            allow_belts = false,
+          }
+        end
+      end
+      struct.container_inventory.clear()
+    end
     struct.container.destroy()
     struct.arithmetic_1.destroy()
     struct.arithmetic_2.destroy()
@@ -174,27 +188,3 @@ script.on_nth_tick(60 * 60, function(event)
     end
   end
 end)
-
-function Handler.on_mined_entity(event)
-  local entity = event.entity
-  local struct = storage.structs[entity.unit_number]
-
-  for slot = 1, #struct.container_inventory do
-    local stack = struct.container_inventory[slot]
-    if stack.valid_for_read then
-      event.buffer.insert(stack)
-    end
-  end
-
-  struct.container_inventory.clear()
-end
-
-for _, event in ipairs({
-  defines.events.on_player_mined_entity,
-  defines.events.on_robot_mined_entity,
-  defines.events.on_space_platform_mined_entity,
-}) do
-  script.on_event(event, Handler.on_mined_entity, {
-    {filter = "name", name = mod_prefix .. "crafter"},
-  })
-end
